--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "nodejs-expressjs-mongodb-base-project",
+  "name": "nodejs-express-template",
   "private": true,
   "version": "1.0.0",
-  "author": "TrungQuanDev - Một Lập Trình Viên",
-  "description": "https://youtube.com/@trungquandev",
+  "author": "Le Duc Vinh",
+  "description": "Nodejs Express Template",
   "engines": {
     "node": "18.16.0"
   },
@@ -28,6 +28,7 @@
     "@babel/preset-env": "^7.22.10",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.47.0",
+    "eslint-config-prettier": "9.0.0",
     "nodemon": "^3.0.1",
     "prettier": "3.1.0"
   }
